[SQUASH] m53x: defconfig: disable some security flags

--- a/arch/arm64/configs/m53x_defconfig
+++ b/arch/arm64/configs/m53x_defconfig
@@ -15,13 +15,12 @@ CONFIG_TOOLS_SUPPORT_RELR=y
 CONFIG_IRQ_WORK=y
 CONFIG_BUILDTIME_EXTABLE_SORT=y
 CONFIG_THREAD_INFO_IN_TASK=y
-
 #
 # General setup
 #
 CONFIG_INIT_ENV_ARG_LIMIT=32
 # CONFIG_COMPILE_TEST is not set
-CONFIG_LOCALVERSION=""
+CONFIG_LOCALVERSION="<user>"
 # CONFIG_LOCALVERSION_AUTO is not set
 CONFIG_BUILD_SALT=""
 CONFIG_HAVE_KERNEL_GZIP=y
@@ -39,6 +38,7 @@ CONFIG_HAVE_ARCH_AUDITSYSCALL=y
 CONFIG_AUDITSYSCALL=y
 CONFIG_AUDIT_WATCH=y
 CONFIG_AUDIT_TREE=y
+# CONFIG_CC_STACKPROTECTOR_STRONG is not set
 
 #
 # IRQ subsystem
@@ -448,12 +448,14 @@ CONFIG_KUSER_HELPERS=y
 #
 # Hypervisor
 #
-CONFIG_UH=y
+# CONFIG_UH is not set
 CONFIG_UH_DEBUG=y
-CONFIG_RKP=y
-CONFIG_KDP=y
+# CONFIG_UH_RKP is not set
+# CONFIG_KDP is not set
 CONFIG_KDP_CRED=y
-CONFIG_KDP_NS=y
+# CONFIG_KDP_NS is not set
+# CONFIG_RKP_NS_PROT is not set
+# CONFIG_RKP_DMAP_PROT is not set
 
 #
 # Power management options
@@ -529,8 +531,9 @@ CONFIG_CPU_FREQ_GOV_PERFORMANCE=y
 CONFIG_CPU_FREQ_GOV_POWERSAVE=y
 CONFIG_CPU_FREQ_GOV_USERSPACE=y
 CONFIG_CPU_FREQ_GOV_ONDEMAND=y
-# CONFIG_CPU_FREQ_GOV_CONSERVATIVE is not set
+CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
+CONFIG_CPU_FREQ_GOV_INTERACTIVE=y
 
 #
 # CPU frequency scaling drivers
@@ -2206,7 +2209,7 @@ CONFIG_DM_SNAPSHOT=y
 # CONFIG_DM_DELAY is not set
 CONFIG_DM_UEVENT=y
 # CONFIG_DM_FLAKEY is not set
-CONFIG_DM_VERITY=y
+# CONFIG_DM_VERITY is not set
 # CONFIG_DM_VERITY_AVB is not set
 CONFIG_DM_VERITY_FEC=y
 # CONFIG_DM_ANDROID_VERITY_AT_MOST_ONCE_DEFAULT_ENABLED is not set
@@ -5889,11 +5892,11 @@ CONFIG_SECURITY_SELINUX_SIDTAB_HASH_BITS=9
 # CONFIG_SECURITY_APPARMOR is not set
 # CONFIG_SECURITY_LOADPIN is not set
 # CONFIG_SECURITY_YAMA is not set
-CONFIG_INTEGRITY=y
-CONFIG_INTEGRITY_SIGNATURE=y
-CONFIG_INTEGRITY_ASYMMETRIC_KEYS=y
+# CONFIG_INTEGRITY is not set
+# CONFIG_INTEGRITY_SIGNATURE is not set
+# CONFIG_INTEGRITY_ASYMMETRIC_KEYS is not set
+# CONFIG_INTEGRITY_AUDIT is not set
 CONFIG_INTEGRITY_TRUSTED_KEYRING=y
-CONFIG_INTEGRITY_AUDIT=y
 # CONFIG_IMA is not set
 # CONFIG_EVM is not set
 CONFIG_DEFAULT_SECURITY_SELINUX=y
@@ -5914,9 +5917,9 @@ CONFIG_INIT_STACK_NONE=y
 # CONFIG_INIT_STACK_ALL_ZERO is not set
 # CONFIG_INIT_ON_ALLOC_DEFAULT_ON is not set
 # CONFIG_INIT_ON_FREE_DEFAULT_ON is not set
-CONFIG_SECURITY_DEFEX=y
+# CONFIG_SECURITY_DEFEX is not set
 # CONFIG_DEFEX_KERNEL_ONLY is not set
-CONFIG_PROCA=y
+# CONFIG_PROCA is not set
 # CONFIG_PROCA_GKI_10 is not set
 CONFIG_PROCA_S_OS=y
 CONFIG_GAF=y
@@ -5924,7 +5927,7 @@ CONFIG_GAF=y
 # CONFIG_GAF_V4 is not set
 # CONFIG_GAF_V5 is not set
 CONFIG_GAF_V6=y
-CONFIG_SECURITY_DSMS=y
+# CONFIG_SECURITY_DSMS is not set
 CONFIG_FIVE=y
 # CONFIG_FIVE_GKI_10 is not set
 # CONFIG_FIVE_GKI_20 is not set
@@ -6422,3 +6425,15 @@ CONFIG_ARCH_HAS_DEVMEM_IS_ALLOWED=y
 # CONFIG_DEBUG_ALIGN_RODATA is not set
 # CONFIG_ARM64_RELOC_TEST is not set
 # CONFIG_CORESIGHT is not set
+
+# CONFIG_SEC_RESTRICT_ROOTING is not set
+# CONFIG_SEC_RESTRICT_SETUID is not set
+# CONFIG_SEC_RESTRICT_FORK is not set
+# CONFIG_SEC_RESTRICT_ROOTING_LOG is not set
+
+# CONFIG_TIMA is not set
+# CONFIG_TIMA_LKMAUTH is not set
+# CONFIG_TIMA_LKM_BLOCK is not set
+# CONFIG_TIMA_LKMAUTH_CODE_PROT is not set
+# CONFIG_TIMA_LOG is not set
+# CONFIG_KNOX_KAP is not set
